<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/patient_creer"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_nom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/editTextNom"
            android:text="Test Nom"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_prenom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/editTextPrenom"
            android:text="Test Prenom"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_taille"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/editTextTaille"
            android:text="160"
            android:textSize="10sp"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_poids"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/editTextPoids"
            android:text="60"
            android:textSize="10sp"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_chambre"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:id="@+id/editTextChambre"
            android:text="C101"
            android:textSize="10sp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/patient_genre"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"></TextView>

        <RadioGroup
            android:id="@+id/radioGroupGenre"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButtonMasculin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/patient_masculin"/>
            <RadioButton
                android:id="@+id/radioButtonFeminin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:text="@string/patient_feminin"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCreerPatient"
        android:text="@string/patient_buttonCreerPatient"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>

    <TextView
        android:text="@string/patient_afficher"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerPatients"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"></Spinner>

        <Button
            android:id="@+id/buttonAfficherPatient"
            android:text="@string/patient_buttonAfficherPatient"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
        </Button>

    </LinearLayout>

    <TextView
        android:text="@string/patient_statistiques"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/service_nombreHommes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/textViewNombreHommes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/service_nombreFemmes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/textViewNombreFemmes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/service_ImcMoyenTous"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/textViewImcMoyen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/service_ImcMoyenHommes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/textViewImcMoyenHommes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/service_ImcMoyenFemmes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/textViewImcMoyenFemmes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/buttonAfficherStatistiques"
        android:text="@string/patient_buttonAfficherStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>

</LinearLayout>